# avm-pipeline

./: .gitignore  CMakeLists.txt  README.md
data/: extrinsics_gt.json  ground_truth.yaml  intrinsics_gt.json
include/: birdview_stitch.h  detect.h  extrinsic_calib.h  fisheye_calib.h  undistort.h
output/: fisheye_calib_back.yaml  fisheye_calib_front.yaml  fisheye_calib_left.yaml  fisheye_calib_right.yaml
scripts/: export_onnx.py  generate_fisheye.py  generate_test_views.py
src/: birdview_stitch.cpp  detect.cpp  extrinsic_calib.cpp  fisheye_calib.cpp  pipeline.cpp  undistort.cpp
